Добавляет грид-сетку для карточек в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -24,17 +24,17 @@
           </li>
         </ul>
         <ul class="navigation-list navigation-search">
-          <li class="navigation-item">
+          <li class="navigation-item navigation-item-search">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
-          <li class="navigation-item">
+          <li class="navigation-item navigation-item-favourite">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
-          <li class="navigation-item">
+          <li class="navigation-item navigation-favourites">
             <a class="navigation-link button button-basic" href="#">Хочу сюда</a>
           </li>
         </ul>
@@ -162,15 +162,17 @@
                 alt="Amara Resort & Spa">
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             </a>
-            <table class="hotel-card-price">
-              <tr>
-                <td>Гостиница</td>
-                <td>От 4000 ₽</td>
-              </tr>
-            </table>
-            <a class="hotel-card-button button button-basic" href="#">Подробнее</a>
-            <a class="hotel-card-button button button-additional" href="#">В избранное</a>
-            <div class="hotel-card-button button button button-ranking">Рейтинг: 8,5</div>
+            <div class="hotel-card-container">
+              <table class="hotel-card-price">
+                <tr>
+                  <td>Гостиница</td>
+                  <td>От 4000 ₽</td>
+                </tr>
+              </table>
+              <a class="hotel-card-button button button-basic button-more" href="#">Подробнее</a>
+              <a class="hotel-card-button button button-additional button-favourite" href="#">В избранное</a>
+              <div class="hotel-card-button button button button-ranking">Рейтинг: 8,5</div>
+            </div>
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
@@ -178,15 +180,17 @@
                 alt="Villas at Poco Diablo">
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
             </a>
-            <table class="hotel-card-price">
-              <tr>
-                <td>Гостиница</td>
-                <td>От 5000 ₽</td>
-              </tr>
-            </table>
-            <a class="hotel-card-button button button-basic" href="#">Подробнее</a>
-            <a class="hotel-card-button button button-selected" href="#">В избранном</a>
-            <div class="hotel-card-button button button button-ranking">Рейтинг: 9,2</div>
+            <div class="hotel-card-container">
+              <table class="hotel-card-price">
+                <tr>
+                  <td>Гостиница</td>
+                  <td>От 5000 ₽</td>
+                </tr>
+              </table>
+              <a class="hotel-card-button button button-basic button-more" href="#">Подробнее</a>
+              <a class="hotel-card-button button button-selected button-favourite" href="#">В избранном</a>
+              <div class="hotel-card-button button button button-ranking">Рейтинг: 9,2</div>
+            </div>
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
@@ -194,15 +198,17 @@
                 alt="Desert Quail Inn">
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
             </a>
-            <table class="hotel-card-price">
-              <tr>
-                <td>Гостиница</td>
-                <td>От 2500 ₽</td>
-              </tr>
-            </table>
-            <a class="hotel-card-button button button-basic" href="#">Подробнее</a>
-            <a class="hotel-card-button button button-additional" href="#">В избранное</a>
-            <div class="hotel-card-button button button button-ranking">Рейтинг: 6,9</div>
+            <div class="hotel-card-container">
+              <table class="hotel-card-price">
+                <tr>
+                  <td>Гостиница</td>
+                  <td>От 2500 ₽</td>
+                </tr>
+              </table>
+              <a class="hotel-card-button button button-basic button-more" href="#">Подробнее</a>
+              <a class="hotel-card-button button button-additional button-favourite" href="#">В избранное</a>
+              <div class="hotel-card-button button button button-ranking">Рейтинг: 6,9</div>
+            </div>
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
@@ -210,15 +216,17 @@
                 alt="GreenTree Inn">
               <h3 class="hotel-card-title">GreenTree Inn</h3>
             </a>
-            <table class="hotel-card-price">
-              <tr>
-                <td>Гостиница</td>
-                <td>От 1500 ₽</td>
-              </tr>
-            </table>
-            <a class="hotel-card-button button button-basic" href="#">Подробнее</a>
-            <a class="hotel-card-button button button-additional" href="#">В избранное</a>
-            <div class="hotel-card-button button button button-ranking">Рейтинг: 5,0</div>
+            <div class="hotel-card-container">
+              <table class="hotel-card-price">
+                <tr>
+                  <td>Гостиница</td>
+                  <td>От 1500 ₽</td>
+                </tr>
+              </table>
+              <a class="hotel-card-button button button-basic button-more" href="#">Подробнее</a>
+              <a class="hotel-card-button button button-additional button-favourite" href="#">В избранное</a>
+              <div class="hotel-card-button button button button-ranking">Рейтинг: 5,0</div>
+            </div>
           </li>
         </ul>
         <div class="paginaion-container">
