--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
-          <li class="navigation-item">
+          <li class="navigation-item navigation-favourites">
             <a class="navigation-link button button-basic" href="#">Хочу сюда</a>
           </li>
         </ul>
