--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
           </li>
         </ul>
         <ul class="navigation-list navigation-search">
-          <li class="navigation-item">
+          <li class="navigation-item navigation-item-search">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
-          <li class="navigation-item">
+          <li class="navigation-item navigation-item-favourite">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Избранное</span>
             </a>
