--- a/catalog.html
+++ b/catalog.html
@@ -124,12 +124,12 @@
             </div>
           </fieldset>
           <fieldset class="catalog-filter-group filter-buttons">
-            <div>
-              <button class="button button-additional" type="submit">Применить</button>
-            </div>
-            <div>
+
+              <button class="button button-additional button-apply" type="submit">Применить</button>
+
+
               <button class="button button-reset" type="submit">Сбросить</button>
-            </div>
+
           </fieldset>
         </form>
       </section>
@@ -143,13 +143,13 @@
             <option value="expensive">Сначала дорогие</option>
           </select>
           <div class="sorting-buttons-container">
-            <a href="#" class="button button-view button-active">
+            <a href="#" class="button button-view button-view-cards button-active">
               <span class="visually-hidden">Показать карточки</span>
             </a>
-            <a href="#" class="button button-view">
+            <a href="#" class="button button-view button-view-slides">
               <span class="visually-hidden">Показать слайдшоу</span>
             </a>
-            <a class="button button-view" href="#">
+            <a class="button button-view button-view-list" href="#">
               <span class="visually-hidden">Показать список</span>
             </a>
           </div>
@@ -250,7 +250,7 @@
               <a class="button button-additional pagination-link" href="#">10</a>
             </li>
           </ul>
-          <form action="https://echo.htmlacademy.ru/courses" method="post">
+          <form class="hotels-amount-form" action="https://echo.htmlacademy.ru/courses" method="post">
 
             <p class="hotels-amount">Гостиниц на странице:</p>
             <select class="button button-hotels-amount" name="hotels-amount">
@@ -290,17 +290,17 @@
               <h3 class="page-footer-title visually-hidden">Социальные сети</h3>
               <ul class="footer-social-list">
                 <li class="footer-social-item">
-                  <a class="button footer-social-link" href="https://vk.com/htmlacademy">
+                  <a class="button footer-social-link footer-social-vk" href="https://vk.com/htmlacademy">
                     <span class="visually-hidden">ВКонтакте</span>
                   </a>
                 </li>
                 <li class="footer-social-item">
-                  <a class="button footer-social-link" href="https://t.me/htmlacademy">
+                  <a class="button footer-social-link footer-social-telegram" href="https://t.me/htmlacademy">
                     <span class="visually-hidden">Телеграм</span>
                   </a>
                 </li>
                 <li class="footer-social-item">
-                  <a class="button footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
+                  <a class="button footer-social-link footer-social-youtube" href="https://www.youtube.com/user/htmlacademyru">
                     <span class="visually-hidden">Youtube</span>
                   </a>
                 </li>
