--- a/index.html
+++ b/index.html
@@ -148,17 +148,17 @@
               <h3 class="page-footer-title visually-hidden">Социальные сети</h3>
               <ul class="footer-social-list">
                 <li class="footer-social-item">
-                  <a class="button footer-social-link" href="https://vk.com/htmlacademy">
+                  <a class="button footer-social-link footer-social-vk" href="https://vk.com/htmlacademy">
                     <span class="visually-hidden">ВКонтакте</span>
                   </a>
                 </li>
                 <li class="footer-social-item">
-                  <a class="button footer-social-link" href="https://t.me/htmlacademy">
+                  <a class="button footer-social-link footer-social-telegram" href="https://t.me/htmlacademy">
                     <span class="visually-hidden">Телеграм</span>
                   </a>
                 </li>
                 <li class="footer-social-item">
-                  <a class="button footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
+                  <a class="button footer-social-link footer-social-youtube" href="https://www.youtube.com/user/htmlacademyru">
                     <span class="visually-hidden">Youtube</span>
                   </a>
                 </li>
