Добавляет object-fit и max-width изображениям

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <header class="page-header">
       <nav class="navigation">
-        <img class="page-header-logo" src="images/logo/logo.svg" width="139" height="70" alt="Логотип Седоны">
+        <img class="page-header-logo image" src="images/logo/logo.svg" width="139" height="70" alt="Логотип Седоны">
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link navigation-link-current">Главная</a>
@@ -44,7 +44,7 @@
       <h1 class="visually-hidden">Седона</h1>
       <section class="welcome">
         <h2 class="visually-hidden">Добро пожаловать</h2>
-        <img class="welcome-image" src="images/welcome/welcome.svg" width="458" height="352"
+        <img class="welcome-image image" src="images/welcome/welcome.svg" width="458" height="352"
           alt="Welcome to the gorgeous Sedona because the Grand Canyon sucks">
       </section>
       <section class="description">
@@ -61,7 +61,7 @@
                 <p class="advantages-description-number">— №1 —</p>
                 <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
-              <img class="advantages-image" src="images/advantage/street.jpg" width="800" height="384"
+              <img class="advantages-image image" src="images/advantage/street.jpg" width="800" height="384"
                 alt="Улицы Седоны">
             </div>
             <ul class="advantages-nested-list">
@@ -91,7 +91,7 @@
             </ul>
           </li>
           <li class="advantages-item advantages-container">
-            <img class="advantages-image" src="images/advantage/bridge.jpg" width="800" height="384" alt="Мост дьявола">
+            <img class="advantages-image image" src="images/advantage/bridge.jpg" width="800" height="384" alt="Мост дьявола">
             <div class="advantages-items advantages-bridge">
               <h3 class="advantages-title">Там есть мост дьявола</h3>
               <p class="advantages-description-number">— №2 —</p>
@@ -172,7 +172,7 @@
             </section>
             <section class="htmlacademy-link">
               <h3 class="visually-hidden">Логотип HTML Academy</h3>
-              <a href="https://htmlacademy.ru/"><img class="page-footer-logo" src="images/logo/html_academy.svg"
+              <a href="https://htmlacademy.ru/"><img class="page-footer-logo image" src="images/logo/html_academy.svg"
                   width="115" height="33" alt="Логотип HTML Academy"></a>
             </section>
           </div>
