--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
   <div class="container">
     <header class="page-header">
       <nav class="navigation">
-        <img class="page-header-logo" src="images/logo/logo.svg" width="139" height="70" alt="Логотип Седоны">
+        <img class="page-header-logo image" src="images/logo/logo.svg" width="139" height="70" alt="Логотип Седоны">
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="intex.html">Главная</a>
@@ -158,7 +158,7 @@
         <ul class="hotel-list">
           <li class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
-              <img class="hotel-card-image" src="images/hotels/amara_resort.jpg" width="300" height="211"
+              <img class="hotel-card-image image" src="images/hotels/amara_resort.jpg" width="300" height="211"
                 alt="Amara Resort & Spa">
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             </a>
@@ -176,7 +176,7 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
-              <img class="hotel-card-image" src="images/hotels/villas_at_poco_diablo.jpg" width="300" height="211"
+              <img class="hotel-card-image image" src="images/hotels/villas_at_poco_diablo.jpg" width="300" height="211"
                 alt="Villas at Poco Diablo">
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
             </a>
@@ -194,7 +194,7 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
-              <img class="hotel-card-image" src="images/hotels/desert_quail_inn.jpg" width="300" height="211"
+              <img class="hotel-card-image image" src="images/hotels/desert_quail_inn.jpg" width="300" height="211"
                 alt="Desert Quail Inn">
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
             </a>
@@ -212,7 +212,7 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
-              <img class="hotel-card-image" src="images/hotels/greentree_inn.jpg" width="300" height="211"
+              <img class="hotel-card-image image" src="images/hotels/greentree_inn.jpg" width="300" height="211"
                 alt="GreenTree Inn">
               <h3 class="hotel-card-title">GreenTree Inn</h3>
             </a>
@@ -314,7 +314,7 @@
             </section>
             <section class="htmlacademy-link">
               <h3 class="visually-hidden">Логотип HTML Academy</h3>
-              <a href="https://htmlacademy.ru/"><img class="page-footer-logo" src="images/logo/html_academy.svg"
+              <a href="https://htmlacademy.ru/"><img class="page-footer-logo image" src="images/logo/html_academy.svg"
                   width="115" height="33" alt="Логотип HTML Academy"></a>
             </section>
           </div>
