--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
                 alt="Улицы Седоны">
             </div>
             <ul class="advantages-nested-list">
-              <li class="avantages-item-nested">
+              <li class="advantages-item-nested">
                 <div class="advantages-items advantages-nested advantages-nested-housing">
                   <h4 class="advantages-title">Жильё</h4>
                   <p class="advantages-description">Рекомендуем пожить в настоящем мотеле,
                     всё как в кино!</p>
                 </div>
               </li>
-              <li class="avantages-item-nested">
+              <li class="advantages-item-nested">
                 <div class="advantages-items advantages-nested advantages-nested-eating">
                   <h4 class="advantages-title">Еда</h4>
                   <p class="advantages-description">Всегда заказывайте топовый фирменный
@@ -80,7 +80,7 @@
                     разочаруетесь!</p>
                 </div>
               </li>
-              <li class="avantages-item-nested">
+              <li class="advantages-item-nested">
                 <div class="advantages-items advantages-nested advantages-nested-souvenir">
                   <h4 class="advantages-title">Сувениры</h4>
                   <p class="advantages-description">Не только китайского, но и настоящего
@@ -144,7 +144,7 @@
         </section>
         <section class="footer-contacts">
           <h2 class="visually-hidden">Контакты</h2>
-          <div class="footer-contacts-container">
+
             <section class="footer-social">
               <h3 class="page-footer-title visually-hidden">Социальные сети</h3>
               <ul class="footer-social-list">
@@ -183,7 +183,7 @@
               <a href="https://htmlacademy.ru/"><img class="page-footer-logo image" src="images/logo/html_academy.svg"
                   width="115" height="33" alt="Логотип HTML Academy"></a>
             </section>
-          </div>
+
         </section>
       </div>
     </footer>
