Задает состояния кнопкам

--- a/catalog.html
+++ b/catalog.html
@@ -155,7 +155,7 @@
             <option value="expensive">Сначала дорогие</option>
           </select>
           <div class="sorting-buttons-container">
-            <a href="#" class="button button-view button-view-cards button-active">
+            <a href="#" class="button button-view button-view-cards button-view-active">
               <span class="visually-hidden">Показать карточки</span>
             </a>
             <a href="#" class="button button-view button-view-slides">
