Задает состояния хлебным крошкам

--- a/catalog.html
+++ b/catalog.html
@@ -135,6 +135,7 @@
               </div>
             </fieldset>
             <fieldset class="catalog-filter-group filter-buttons">
+              <legend class="catalog-filter-title visually-hidden">Выбрать:</legend>
 
               <button class="button button-additional button-apply" type="submit">Применить</button>
 
