--- a/catalog.html
+++ b/catalog.html
@@ -113,6 +113,12 @@
             <fieldset class="catalog-filter-group">
               <legend class="catalog-filter-title">Стоимость, ₽:</legend>
               <div class="range">
+                <div class="range-wrapper-inputs">
+                  <label for="min-price" class="visually-hidden">от</label>
+                  <input class="range-input" type="number" value="0" name="min-price" id="min-price">
+                  <label for="max-price" class="visually-hidden">от</label>
+                  <input class="range-input" type="number" value="9000" name="max-price" id="max-price">
+                </div>
                 <div class="range-scale">
                   <div class="range-bar">
                     <button class="range-toggle toggle-min">
@@ -122,15 +128,6 @@
                       <span class="visually-hidden">Изменить максимальную цену.</span>
                     </button>
                   </div>
-                </div>
-
-                <div class="range-wrapper-inputs">
-                  <label class="catalog-filter-label">
-                    <input class="range-input" type="number" value="0" name="min-price">от
-                  </label>
-                  <label class="catalog-filter-label">
-                    <input class="range-input" type="number" value="9000" name="max-price">до
-                  </label>
                 </div>
               </div>
             </fieldset>
@@ -185,16 +182,20 @@
               <a class="hotel-card-button button button-basic button-more" href="#">Подробнее</a>
               <a class="hotel-card-button button button-additional button-favourite" href="#">В избранное</a>
               <span class="hotel-card-stars">
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
               </span>
@@ -218,16 +219,20 @@
               <a class="hotel-card-button button button-basic button-more" href="#">Подробнее</a>
               <a class="hotel-card-button button button-selected button-favourite" href="#">В избранном</a>
               <span class="hotel-card-stars">
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
               </span>
@@ -250,13 +255,16 @@
               <a class="hotel-card-button button button-basic button-more" href="#">Подробнее</a>
               <a class="hotel-card-button button button-additional button-favourite" href="#">В избранное</a>
               <span class="hotel-card-stars">
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
               </span>
@@ -279,10 +287,12 @@
               <a class="hotel-card-button button button-basic button-more" href="#">Подробнее</a>
               <a class="hotel-card-button button button-additional button-favourite" href="#">В избранное</a>
               <span class="hotel-card-stars">
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
-                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
                   <path d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" fill="#83B3D3" />
                 </svg>
               </span>
