--- a/catalog.html
+++ b/catalog.html
@@ -120,7 +120,7 @@
                   <input class="range-input" type="number" value="9000" name="max-price" id="max-price">
                 </div>
                 <div class="range-scale">
-                  <div class="range-bar">
+                  <div class="range-bar" style="width: 236px">
                     <button class="range-toggle toggle-min">
                       <span class="visually-hidden">Изменить минимальную цену.</span>
                     </button>
