--- a/index.html
+++ b/index.html
@@ -262,7 +262,19 @@
               </button>
             </span>
 
-            <label class="search-parameter children" for="children-input">Дети:</label>
+            <span class="form-label">
+              <label class="search-parameter children" for="children-input">Дети:</label>
+              <span class="tooltip">
+                <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label">
+                  <!--<svg class="tooltip-icon" width="21" height="20" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M9.11 4h2v2h-2V4Zm2 12h-2V7h2v9Z" fill="#000"/>
+                </svg>-->
+                  <!--<span class="tooltip-text" role="tooltip" id="tooltip-label">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.
+                </span>-->
+                </button>
+              </span>
+            </span>
+
             <span class="select-number-form">
               <button class="button modal-button minus-plus-button" type="button">
                 <span class="visually-hidden">Минус</span>
