--- a/index.html
+++ b/index.html
@@ -242,70 +242,62 @@
             <span class="select-number-form">
               <button class="button modal-button minus-plus-button" type="button">
                 <span class="visually-hidden">Минус</span>
-                <div class="sign-button">
+                <span class="sign-button">
                   <svg class="sign-icon" aria-hidden="true" focusable="false" width="13" height="1" viewBox="0 0 13 1"
                     xmlns="http://www.w3.org/2000/svg">
                     <path d="M0 0v1h13V0H0Z" />
                   </svg>
-                </div>
+                </span>
               </button>
               <input class="modal-field number-input" type="number" value="2" name="adults-input" id="adults-input"
                 required>
               <button class="button modal-button minus-plus-button" type="button">
                 <span class="visually-hidden">Плюс</span>
-                <div class="sign-button">
+                <span class="sign-button">
                   <svg class="sign-icon" aria-hidden="true" focusable="false" width="13" height="13" viewBox="0 0 13 13"
                     xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 6H7V0H6v6H0v1h6v6h1V7h6V6Z" />
                   </svg>
-                </div>
+                </span>
               </button>
             </span>
 
             <span class="form-label">
               <label class="search-parameter children" for="children-input">Дети:</label>
               <span class="tooltip">
-                <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label">
-                  <!--<svg class="tooltip-icon" width="21" height="20" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M9.11 4h2v2h-2V4Zm2 12h-2V7h2v9Z" fill="#000"/>
-                </svg>-->
-                  <!--<span class="tooltip-text" role="tooltip" id="tooltip-label">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.
-                </span>-->
-                </button>
+                <button class="tooltip-toggle" type="button"></button>
+                <span class="tooltip-text" role="tooltip" id="tooltip-label">Укажите количество детей, которые будут с
+                  вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.
+                </span>
               </span>
             </span>
 
             <span class="select-number-form">
               <button class="button modal-button minus-plus-button" type="button">
                 <span class="visually-hidden">Минус</span>
-                <div class="sign-button">
+                <span class="sign-button">
                   <svg class="sign-icon" aria-hidden="true" focusable="false" width="13" height="1" viewBox="0 0 13 1"
                     xmlns="http://www.w3.org/2000/svg">
                     <path d="M0 0v1h13V0H0Z" />
                   </svg>
-                </div>
+                </span>
               </button>
               <input class="modal-field number-input" type="number" value="1" name="children-input" id="children-input">
               <button class="button modal-button minus-plus-button" type="button">
                 <span class="visually-hidden">Плюс</span>
-                <div class="sign-button">
+                <span class="sign-button">
                   <svg class="sign-icon" aria-hidden="true" focusable="false" width="13" height="13" viewBox="0 0 13 13"
                     xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 6H7V0H6v6H0v1h6v6h1V7h6V6Z" />
                   </svg>
-                </div>
+                </span>
               </button>
-
             </span>
           </div>
         </div>
-
         <button class="button button-additional button-search-modal" type="submit">Найти</button>
-
       </form>
-
     </div>
-
   </div>
 </body>
 
