Добавляет точки в подписи к картинкам

--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
   <div class="container">
     <header class="page-header">
       <nav class="navigation">
-        <img class="page-header-logo image" src="images/logo/logo.svg" width="139" height="70" alt="Логотип Седоны">
+        <img class="page-header-logo image" src="images/logo/logo.svg" width="139" height="70" alt="Логотип Седоны.">
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="intex.html">Главная</a>
@@ -174,7 +174,7 @@
           <li class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
               <img class="hotel-card-image image" src="images/hotels/amara_resort.jpg" width="300" height="211"
-                alt="Amara Resort & Spa">
+                alt="Amara Resort & Spa.">
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             </a>
             <div class="hotel-card-container">
@@ -206,7 +206,7 @@
           <li class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
               <img class="hotel-card-image image" src="images/hotels/villas_at_poco_diablo.jpg" width="300" height="211"
-                alt="Villas at Poco Diablo">
+                alt="Villas at Poco Diablo.">
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
             </a>
             <div class="hotel-card-container">
@@ -238,7 +238,7 @@
           <li class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
               <img class="hotel-card-image image" src="images/hotels/desert_quail_inn.jpg" width="300" height="211"
-                alt="Desert Quail Inn">
+                alt="Desert Quail Inn.">
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
             </a>
             <div class="hotel-card-container">
@@ -266,7 +266,7 @@
           <li class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
               <img class="hotel-card-image image" src="images/hotels/greentree_inn.jpg" width="300" height="211"
-                alt="GreenTree Inn">
+                alt="GreenTree Inn.">
               <h3 class="hotel-card-title">GreenTree Inn</h3>
             </a>
             <div class="hotel-card-container">
