--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <header class="page-header">
       <nav class="navigation">
-        <img class="page-header-logo image" src="images/logo/logo.svg" width="139" height="70" alt="Логотип Седоны">
+        <img class="page-header-logo image" src="images/logo/logo.svg" width="139" height="70" alt="Логотип Седоны.">
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link navigation-link-current">Главная</a>
@@ -45,7 +45,7 @@
       <section class="welcome">
         <h2 class="visually-hidden">Добро пожаловать</h2>
         <img class="welcome-image image" src="images/welcome/welcome.svg" width="458" height="352"
-          alt="Welcome to the gorgeous Sedona because the Grand Canyon sucks">
+          alt="Welcome to the gorgeous Sedona because the Grand Canyon sucks.">
       </section>
       <section class="description">
         <h2 class="description-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
@@ -62,7 +62,7 @@
                 <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <img class="advantages-image image" src="images/advantage/street.jpg" width="800" height="384"
-                alt="Улицы Седоны">
+                alt="Улицы Седоны.">
             </div>
             <ul class="advantages-nested-list">
               <li class="advantages-item-nested">
@@ -94,7 +94,7 @@
           </li>
           <li class="advantages-item advantages-container">
             <img class="advantages-image image" src="images/advantage/bridge.jpg" width="800" height="384"
-              alt="Мост дьявола">
+              alt="Мост дьявола.">
             <div class="advantages-items advantages-bridge">
               <h3 class="advantages-title">Там есть <br>
                 мост дьявола
