Изменяет размер кнопок режима просмотра, меняет тип кнопки сброса на reset

--- a/catalog.html
+++ b/catalog.html
@@ -143,7 +143,7 @@
             <fieldset class="catalog-filter-group filter-buttons">
               <legend class="catalog-filter-title visually-hidden">Выбрать.</legend>
               <button class="button button-additional button-apply" type="submit">Применить</button>
-              <button class="button button-reset" type="button">Сбросить</button>
+              <button class="button button-reset" type="reset">Сбросить</button>
             </fieldset>
           </div>
         </form>
