Добавляет ссылку на главную в логотип Седоны

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
   <div class="container">
     <header class="page-header">
       <nav class="navigation">
-        <img class="page-header-logo image" src="images/logo/logo.svg" width="139" height="70" alt="Логотип Седоны.">
+        <a class="navigation-link logo-link">
+          <img class="page-header-logo image" src="images/logo/logo.svg" width="139" height="70" alt="Логотип Седоны.">
+        </a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link navigation-link-current">Главная</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="about-sedona.html">О Седоне</a>
+            <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="catalog.html">Гостиницы</a>
@@ -200,15 +202,12 @@
               </svg>
             </a>
           </section>
-
         </section>
       </div>
     </footer>
-
   </div>
   <div class="modal-container modal-container-close">
     <div class="modal modal-search">
-
       <div class="modal-title-container">
         <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
         <button class="modal-close-button" type="button">
