--- a/catalog.html
+++ b/catalog.html
@@ -11,13 +11,15 @@
   <div class="container">
     <header class="page-header">
       <nav class="navigation">
-        <img class="page-header-logo image" src="images/logo/logo.svg" width="139" height="70" alt="Логотип Седоны.">
+        <a class="navigation-link logo-link" href="index.html">
+          <img class="page-header-logo image" src="images/logo/logo.svg" width="139" height="70" alt="Логотип Седоны.">
+        </a>
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="intex.html">Главная</a>
+            <a class="navigation-link" href="index.html">Главная</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="about-sedona.html">О Седоне</a>
+            <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link navigation-link-current">Гостиницы</a>
@@ -123,17 +125,19 @@
               <legend class="catalog-filter-title">Стоимость, ₽:</legend>
               <div class="range">
                 <div class="range-wrapper-inputs">
-                  <label for="min-price" class="visually-hidden">Минимальная цена.</label>
+                  <label class="visually-hidden" for="min-price">Минимальная цена.</label>
                   <input class="range-input" type="number" value="0" name="min-price" id="min-price">
-                  <label for="max-price" class="visually-hidden">Максимальная цена.</label>
+                  <span class="range-min-text">от</span>
+                  <label class="visually-hidden" for="max-price">Максимальная цена.</label>
                   <input class="range-input" type="number" value="9000" name="max-price" id="max-price">
+                  <span class="range-max-text">до</span>
                 </div>
                 <div class="range-scale">
                   <div class="range-bar" style="width: 236px">
-                    <button class="range-toggle toggle-min">
+                    <button class="range-toggle toggle-min" type="button">
                       <span class="visually-hidden">Изменить минимальную цену.</span>
                     </button>
-                    <button class="range-toggle toggle-max">
+                    <button class="range-toggle toggle-max" type="button">
                       <span class="visually-hidden">Изменить максимальную цену.</span>
                     </button>
                   </div>
@@ -158,10 +162,10 @@
             <option value="expensive">Сначала дорогие</option>
           </select>
           <div class="sorting-buttons-container">
-            <a href="#" class="button button-view button-view-cards button-view-active">
+            <a class="button button-view button-view-cards button-view-active" href="#">
               <span class="visually-hidden">Показать карточки.</span>
             </a>
-            <a href="#" class="button button-view button-view-slides">
+            <a class="button button-view button-view-slides" href="#">
               <span class="visually-hidden">Показать слайдшоу.</span>
             </a>
             <a class="button button-view button-view-list" href="#">
@@ -172,7 +176,7 @@
         </div>
         <ul class="hotel-list">
           <li class="hotel-card">
-            <a class="hotel-card-link" href="hotel.html">
+            <a class="hotel-card-link" href="#">
               <img class="hotel-card-image image" src="images/hotels/amara_resort.jpg" width="300" height="211"
                 alt="Amara Resort & Spa.">
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
@@ -204,7 +208,7 @@
             </div>
           </li>
           <li class="hotel-card">
-            <a class="hotel-card-link" href="hotel.html">
+            <a class="hotel-card-link" href="#">
               <img class="hotel-card-image image" src="images/hotels/villas_at_poco_diablo.jpg" width="300" height="211"
                 alt="Villas at Poco Diablo.">
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
@@ -236,7 +240,7 @@
             </div>
           </li>
           <li class="hotel-card">
-            <a class="hotel-card-link" href="hotel.html">
+            <a class="hotel-card-link" href="#">
               <img class="hotel-card-image image" src="images/hotels/desert_quail_inn.jpg" width="300" height="211"
                 alt="Desert Quail Inn.">
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
@@ -264,7 +268,7 @@
             </div>
           </li>
           <li class="hotel-card">
-            <a class="hotel-card-link" href="hotel.html">
+            <a class="hotel-card-link" href="#">
               <img class="hotel-card-image image" src="images/hotels/greentree_inn.jpg" width="300" height="211"
                 alt="GreenTree Inn.">
               <h3 class="hotel-card-title">GreenTree Inn</h3>
@@ -337,7 +341,7 @@
           <p class="newsletter-description">Только полезная информация и никакого спама, <br>
             честное бойскаутское!</p>
           <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-            <label for="newsletter-email" class="visually-hidden">E-mail.</label>
+            <label class="visually-hidden" for="newsletter-email">E-mail.</label>
             <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
               required>
             <button class="button button-additional button-newsletter" type="submit">Подписаться</button>
