Изменяет размеры и положения элементов по pixel perfect

--- a/catalog.html
+++ b/catalog.html
@@ -295,7 +295,7 @@
           </li>
         </ul>
 
-        <div class="paginaion-container">
+        <div class="pagination-container">
           <ul class="pagination">
             <li class="pagination-item pagination-item-current">
               <a class="button button-pagination-current pagination-link">1</a>
@@ -406,6 +406,21 @@
       </div>
     </footer>
   </div>
+  <div style="
+  position: absolute;
+  width: 1280px;
+  height: 2216px;
+  margin: 0 auto;
+  background-image: url('images/catalog.jpg');
+  position: absolute;
+  background-repeat: no-repeat;
+  opacity: 0.5;
+  left: 50%;
+  transform: translateX(-50%);
+  filter: invert(1);
+  pointer-events: none;
+  z-index: 3;
+"></div>
 </body>
 
 </html>
