--- a/index.html
+++ b/index.html
@@ -305,6 +305,22 @@
       </form>
     </div>
   </div>
+
+  <div style="
+  position: absolute;
+  width: 1280px;
+  height: 3315px;
+  margin: 0 auto;
+  background-image: url("images/main.jpg");
+  position: absolute;
+  background-repeat: no-repeat;
+  opacity: 0.5;
+  left: 50%;
+  transform: translateX(-50%);
+  filter: invert(1);
+  pointer-events: none;
+"></div>
+
 </body>
 
 </html>
