Изменяет размеры по pixel perfect

--- a/catalog.html
+++ b/catalog.html
@@ -39,7 +39,7 @@
             </a>
           </li>
           <li class="navigation-item navigation-favourites">
-            <a class="navigation-link button button-basic" href="#">Хочу сюда</a>
+            <a class="navigation-link button button-basic" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -406,21 +406,6 @@
       </div>
     </footer>
   </div>
-  <div style="
-  position: absolute;
-  width: 1280px;
-  height: 2216px;
-  margin: 0 auto;
-  background-image: url('images/catalog.jpg');
-  position: absolute;
-  background-repeat: no-repeat;
-  opacity: 0.5;
-  left: 50%;
-  transform: translateX(-50%);
-  filter: invert(1);
-  pointer-events: none;
-  z-index: 3;
-"></div>
 </body>
 
 </html>
