--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </a>
           </li>
           <li class="navigation-item navigation-favourites">
-            <a class="navigation-link button button-basic" href="#">Хочу сюда</a>
+            <a class="navigation-link button button-basic" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -305,22 +305,6 @@
       </form>
     </div>
   </div>
-
-  <div style="
-  position: absolute;
-  width: 1280px;
-  height: 3315px;
-  margin: 0 auto;
-  background-image: url("images/main.jpg");
-  position: absolute;
-  background-repeat: no-repeat;
-  opacity: 0.5;
-  left: 50%;
-  transform: translateX(-50%);
-  filter: invert(1);
-  pointer-events: none;
-"></div>
-
 </body>
 
 </html>
